--- a/package.json
+++ b/package.json
@@ -1,16 +1,61 @@
 {
   "name": "notification-service",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Notification Service - Email/SMS transactionnel avec queues Redis",
+  "main": "src/server.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --coverage",
+    "test:ci": "NODE_ENV=test jest --ci --coverage --watchAll=false"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  "keywords": [
+    "event-planner",
+    "notification-service",
+    "email",
+    "sms",
+    "transactional",
+    "nodejs",
+    "express",
+    "backend",
+    "api",
+    "saas"
+  ],
+  "author": "Hassid Belkassim",
+  "license": "MIT",
+  "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
+    "axios": "^1.13.2",
+    "bull": "^4.12.2",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "handlebars": "^4.7.8",
+    "helmet": "^7.1.0",
+    "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "prom-client": "^15.1.3",
+    "redis": "^5.10.0",
+    "twilio": "^5.0.0",
+    "uuid": "^9.0.1",
+    "vonage": "^3.0.0",
+    "winston": "^3.19.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^30.2.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^7.2.2"
+  }
 }
