--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "redis": "^5.10.0",
     "twilio": "^5.0.0",
     "uuid": "^9.0.1",
-    "vonage": "^3.0.0",
+    "@vonage/server-sdk": "^3.25.1",
     "winston": "^3.19.0"
   },
   "devDependencies": {
