feat: documentation complète et corrections SMS
- README.md complet avec architecture notifications et flux
- .env.example mis à jour avec configuration unifiée JWT
- Correction de l'erreur 'Cannot convert undefined or null to object'
- Amélioration de la gestion des numéros de téléphone null/undefined
- Routes refactorisées avec middleware robuste et validation Joi
- Documentation des templates email/SMS et intégrations externes
- Guides de configuration SendGrid, Twilio, Vonage
- Patterns de queues Redis et traitement asynchrone
- Support pour webhooks et notifications en lot

📧 Service notifications robuste et professionnel

--- a/.env.example
+++ b/.env.example
@@ -1,89 +1,137 @@
-# Server Configuration
+# 📧 Event Planner - Notification Service Environment Configuration
+
+# ===========================================
+# 🚀 SERVEUR & ENVIRONNEMENT
+# ===========================================
 PORT=3002
 NODE_ENV=development
 
-# Database Configuration
+# ===========================================
+# 🗄️ BASE DE DONNÉES POSTGRESQL
+# ===========================================
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=event_planner_notifications
 DB_USER=postgres
 DB_PASSWORD=postgres
+DB_SSL=false
 
-# Database Bootstrap - Enable automatic database creation and migrations
-DB_AUTO_BOOTSTRAP=true
+# Bootstrap automatique de la base de données
+DB_AUTO_BOOTSTRAP=false
 
-# Auth Service Configuration
+# ===========================================
+# 🔐 AUTHENTIFICATION UNIFIÉE
+# ===========================================
+# ⚠️ IMPORTANT: Utiliser le même secret que l'auth service
+JWT_SECRET=your_super_secure_256_bit_secret_key_change_in_production
+JWT_ALGORITHM=HS256
+JWT_ISSUER=auth-service
+JWT_AUDIENCE=event-planner
+
+# Configuration validation JWT
+JWT_VERIFY_ISSUER=true
+JWT_VERIFY_AUDIENCE=true
+JWT_VERIFY_EXPIRATION=true
+JWT_MAX_AGE=7d
+JWT_CLOCK_TOLERANCE=0
+
+# ===========================================
+# 🌐 INTER-SERVICES COMMUNICATION
+# ===========================================
+# Token partagé pour communication entre services
+SHARED_SERVICE_TOKEN=shared-service-token-abcdef12345678901234567890
+
+# URLs des autres services
 AUTH_SERVICE_URL=http://localhost:3000
-AUTH_SERVICE_TOKEN=your_auth_service_token
+CORE_SERVICE_URL=http://localhost:3001
+PAYMENT_SERVICE_URL=http://localhost:3003
+TICKET_GENERATOR_SERVICE_URL=http://localhost:3004
+SCAN_VALIDATION_SERVICE_URL=http://localhost:3005
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_for_validation
-
-# Redis Configuration
+# ===========================================
+# 💾 CACHE REDIS & QUEUES
+# ===========================================
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=your_redis_password
-REDIS_DB=3
+REDIS_DB=2
 
-# Email Configuration (SMTP - Primary)
+# Configuration queues
+QUEUE_REDIS_URL=redis://localhost:6379/2
+QUEUE_DEFAULT_JOB_OPTIONS_RETRY_ATTEMPTS=3
+QUEUE_DEFAULT_JOB_OPTIONS_BACKOFF=exponential
+
+# ===========================================
+# 📧 EMAIL SERVICE (SENDGRID)
+# ===========================================
+SENDGRID_API_KEY=SG.your_sendgrid_api_key
+FROM_EMAIL=noreply@eventplanner.com
+FROM_NAME=Event Planner
+
+# Configuration SMTP (fallback)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_password
 
-# SendGrid Configuration (Fallback)
-SENDGRID_API_KEY=SG.your_sendgrid_api_key
-FROM_EMAIL=noreply@eventplanner.com
-FROM_NAME=Event Planner
-
-# SMS Configuration (Twilio - Primary)
+# ===========================================
+# 📱 SMS SERVICE (TWILIO PRIMAIRE)
+# ===========================================
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=your_twilio_phone_number
+TWILIO_PHONE_NUMBER=+1234567890
 
-# Vonage Configuration (SMS Fallback)
+# ===========================================
+# 📱 VONAGE (FALLBACK SMS)
+# ===========================================
 VONAGE_API_KEY=your_vonage_api_key
 VONAGE_API_SECRET=your_vonage_api_secret
 VONAGE_FROM_NUMBER=EventPlanner
 
-# Queue Configuration
-QUEUE_REDIS_URL=redis://localhost:6379/4
-QUEUE_DEFAULT_JOB_OPTIONS_REMOVE_ON_COMPLETE=10
-QUEUE_CONCURRENCY_EMAIL=5
-QUEUE_CONCURRENCY_SMS=3
-QUEUE_CONCURRENCY_BULK=2
-
-# Template Configuration
-TEMPLATES_PATH=./src/core/templates
-EMAIL_TEMPLATES_PATH=./src/core/templates/email
-SMS_TEMPLATES_PATH=./src/core/templates/sms
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-EMAIL_RATE_LIMIT=10_PER_MINUTE
-SMS_RATE_LIMIT=5_PER_MINUTE
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3000
-
-# Logging
+# ===========================================
+# 📝 LOGGING
+# ===========================================
 LOG_LEVEL=info
 LOG_FILE_PATH=logs
+LOG_MAX_SIZE=20MB
+LOG_MAX_FILES=14d
 
-# Security
-API_KEY=your_notification_service_api_key
-WEBHOOK_SECRET=your_webhook_secret
-
-# Monitoring
+# ===========================================
+# 📊 MONITORING
+# ===========================================
 ENABLE_METRICS=true
 METRICS_PORT=9092
 
-# Notification Settings
-DEFAULT_EMAIL_TTL=3600
-DEFAULT_SMS_TTL=1800
-MAX_RETRY_ATTEMPTS=3
-RETRY_DELAY_BASE=2000
-BATCH_MAX_SIZE=1000
-BATCH_CHUNK_SIZE=100
+# ===========================================
+# 🚦 RATE LIMITING
+# ===========================================
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=500
+EMAIL_RATE_LIMIT_PER_HOUR=100
+SMS_RATE_LIMIT_PER_HOUR=50
+
+# ===========================================
+# 📧 EMAIL TEMPLATES
+# ===========================================
+EMAIL_TEMPLATES_PATH=./templates
+DEFAULT_EMAIL_LOCALE=fr
+
+# ===========================================
+# 📱 SMS TEMPLATES
+# ===========================================
+SMS_MAX_LENGTH=160
+SMS_DEFAULT_LOCALE=fr
+
+# ===========================================
+# 🔄 WEBHOOKS
+# ===========================================
+WEBHOOK_TIMEOUT=10000
+WEBHOOK_RETRY_ATTEMPTS=3
+WEBHOOK_SECRET=your_webhook_secret
+
+# ===========================================
+# 📊 NOTIFICATION STATISTICS
+# ===========================================
+ENABLE_DETAILED_LOGGING=true
+STATISTICS_RETENTION_DAYS=30
