feat: Add missing email templates and fix validation
- Add 4 new email templates: account-suspended, email-verification, password-changed, ticket-purchased
- Update validation schema to include existing templates: event-reminder, appointment-reminder
- Add FRONTEND_URL configuration to .env.example and .env
- Create comprehensive routes analysis documentation
- Add complete template testing script
- Fix all template validation issues for email notifications

Templates now support all use cases identified in logs with proper validation.

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,14 @@ DB_POOL_IDLE_TIMEOUT=30000
 DB_AUTO_BOOTSTRAP=false
 
 # ===========================================
+# 🌐 FRONTEND CONFIGURATION
+# ===========================================
+FRONTEND_URL=http://localhost:3000
+# 🏠 URL du frontend pour les liens dans les emails
+# En production: https://votredomaine.com
+# En staging: https://staging.votredomaine.com
+
+# ===========================================
 # 🔐 AUTHENTIFICATION UNIFIÉE
 # ===========================================
 # ⚠️ IMPORTANT: Utiliser le même secret que l'auth service
