--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "expo-server-sdk": "^3.7.0",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "firebase-admin": "^12.0.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
